server/error.txt
Output.java:5: error: reached end of file while parsing
}sdf
 ^
1 error
